# AIDebug

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DISCOVERY.md  MAINTAINERS.md  MANIFEST.in  MEDIUM_ARTICLE.md  README.md  RELEASE.md  ROADMAP.md  config.py  main.py  malware1_exe_report.html  pyproject.toml  requirements.txt  traces.db
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: analysis-workflow.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  mapping_correction.yml
.github/workflows/: ci.yml  publish.yml
analysis/: __init__.py  ai_analyzer.py  cfg.py  disassembler.py  flirt.py  pattern_detector.py  static_analyzer.py
analysis/data/: flirt_sigs.json
debian/: aidebug.1  aidebug.manpages  changelog  control  copyright  watch
debian/tests/: control
debugger/: __init__.py  engine.py  snapshot.py
debugger/scripts/: network_tracer.js  tracer.js  unpack_detector.js
docs/: analyst-workflow.md  comparison.md  curated-list-resubmission-plan.md  kali-new-tool-request.md  safety-model.md  sample-evidence.md  validation-plan.md
docs/release-notes/: v1.1.0.md
examples/: README.md  toy_xor_config.py
examples/mock-output/: aidebug-candidate.yar  aidebug-report.html  aidebug-session.json
packaging/: kali-dependency-notes.md  kali-new-tool-request.md  remnux-submission.md
packaging/remnux/: aidebug.sls
reporting/: __init__.py  html_report.py  json_export.py  yara_generator.py
storage/: __init__.py  trace_store.py
tests/: test_cli.py  test_json_export.py  test_pattern_detector.py
ui/: __init__.py  tui.py
